fix: :bug: Fix the slider bug on smaller screens
Fixed the image slider  bug on smaller screens, made the Gallery link a priority button on the navbar and added modal functionality(mage select and scroll) to the gallery. I also reorganized the images into the assets folder and created a separate folder for the Gallery page

--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@ body::before {
 
 img {
     object-fit: fill;
-    height: 500px; 
-    width: 500px;
+    /* height: 500px; 
+    width: 500px; */
 }
 
 /* READ-MORE LIST HEADING*/
@@ -303,13 +303,15 @@ img {
 	margin: 0 auto;
 }
 
+.slide-image{
+	width: inherit;
+}
 
 
-@media only screen and (max-width: 424px){
+@media (max-width: 424px){
 	.carousel{
-		width: 250px;
-		height: 250px;
-		
+		width: 300px;
+		height: 300px;
 	}
 }
 
